{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 20,
  "lineage": "f8e9ea5f-ca4b-8983-12a1-33d0f39694ce",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:security-group/sg-0e6d380bf47e7f312",
            "description": "Allows HTTP access to Load Balancer",
            "filter": null,
            "id": "sg-0e6d380bf47e7f312",
            "name": "cmtr-vkkq9lu1-sglb",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-sglb"
            },
            "timeouts": null,
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:security-group/sg-0f577c39adbc48acb",
            "description": "Allows HTTP access to EC2 instances",
            "filter": null,
            "id": "sg-0f577c39adbc48acb",
            "name": "cmtr-vkkq9lu1-http_sg",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-http_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:security-group/sg-0c867df722db1879d",
            "description": "SecurityGroup which allow ssh access",
            "filter": null,
            "id": "sg-0c867df722db1879d",
            "name": "cmtr-vkkq9lu1-ec2_sg",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:subnet/subnet-07d32f0db6e4ca202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "cidr-block",
                "values": [
                  "10.0.2.0/24"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-033940a8ef1167e76"
                ]
              }
            ],
            "id": "subnet-07d32f0db6e4ca202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913711198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cmtr-vkkq9lu1-private_subnet"
            },
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:subnet/subnet-04198bc3a416ec0a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "cidr-block",
                "values": [
                  "10.0.4.0/24"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-033940a8ef1167e76"
                ]
              }
            ],
            "id": "subnet-04198bc3a416ec0a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913711198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cmtr-vkkq9lu1-private_subnet"
            },
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:subnet/subnet-0e037479c2efc5c2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "cidr-block",
                "values": [
                  "10.0.1.0/24"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-033940a8ef1167e76"
                ]
              }
            ],
            "id": "subnet-0e037479c2efc5c2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913711198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cmtr-vkkq9lu1-public_subnet"
            },
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:subnet/subnet-01fbd4113b9a6b3ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "cidr-block",
                "values": [
                  "10.0.3.0/24"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-033940a8ef1167e76"
                ]
              }
            ],
            "id": "subnet-01fbd4113b9a6b3ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913711198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cmtr-vkkq9lu1-public_subnet"
            },
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cmtr_vkkq9lu1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:vpc/vpc-033940a8ef1167e76",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00ea2c70f4fb1c797",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0b4b2e12e89cd8c73",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033940a8ef1167e76",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-058ab1dfc74ca733e",
            "owner_id": "396913711198",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-vkkq9lu1-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d167b44a80c2f1b4",
            "arn": "arn:aws:ec2:us-east-1:396913711198:elastic-ip/eipalloc-0d167b44a80c2f1b4",
            "domain": "vpc",
            "id": "eipalloc-0d167b44a80c2f1b4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-207-105-247.compute-1.amazonaws.com",
            "public_ip": "52.207.105.247",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "cmtr-nat-eip"
            },
            "tags_all": {
              "Name": "cmtr-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cmtr_vkkq9lu1_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:loadbalancer/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8",
            "arn_suffix": "app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cmtr-vkkq9lu1-loadbalancer-1307146056.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396913711198:loadbalancer/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cmtr-vkkq9lu1-loadbalancer",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e6d380bf47e7f312"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01fbd4113b9a6b3ea"
              },
              {
                "subnet_id": "subnet-0e037479c2efc5c2b"
              }
            ],
            "subnets": [
              "subnet-01fbd4113b9a6b3ea",
              "subnet-0e037479c2efc5c2b"
            ],
            "vpc_id": "vpc-033940a8ef1167e76",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:loadbalancer/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8"
          },
          "dependencies": [
            "data.aws_security_group.sg",
            "data.aws_subnet.public_a",
            "data.aws_subnet.public_b",
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:listener/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8/57a6d0c94370e945",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:targetgroup/cmtr-vkkq9lu1-tg/7c82ea5045899080",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396913711198:listener/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8/57a6d0c94370e945",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:loadbalancer/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:listener/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8/57a6d0c94370e945"
          },
          "dependencies": [
            "aws_lb.cmtr_vkkq9lu1_loadbalancer",
            "aws_lb_target_group.cmtr_tg",
            "data.aws_security_group.sg",
            "data.aws_subnet.public_a",
            "data.aws_subnet.public_b",
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cmtr_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:targetgroup/cmtr-vkkq9lu1-tg/7c82ea5045899080",
            "arn_suffix": "targetgroup/cmtr-vkkq9lu1-tg/7c82ea5045899080",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396913711198:targetgroup/cmtr-vkkq9lu1-tg/7c82ea5045899080",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:396913711198:loadbalancer/app/cmtr-vkkq9lu1-loadbalancer/c4bb4aa15afcf8a8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cmtr-vkkq9lu1-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396913711198:targetgroup/cmtr-vkkq9lu1-tg/7c82ea5045899080"
          },
          "dependencies": [
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cmtr_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d167b44a80c2f1b4",
            "association_id": "eipassoc-0b25c17931cb78d5c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e0f299945c69f276",
            "network_interface_id": "eni-0027be0640b1b5013",
            "private_ip": "10.0.1.212",
            "public_ip": "52.207.105.247",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e037479c2efc5c2b",
            "tags": {
              "Name": "cmtr-nat-gateway"
            },
            "tags_all": {
              "Name": "cmtr-nat-gateway"
            },
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "data.aws_subnet.public_a",
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024962d4ddc0ff3341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e0f299945c69f276",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-024962d4ddc0ff334",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913711198",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-024962d4ddc0ff334"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.cmtr_nat",
            "aws_route_table.private_a_rt",
            "data.aws_subnet.public_a",
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08efc4f9f4c1340001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e0f299945c69f276",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08efc4f9f4c134000",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913711198",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08efc4f9f4c134000"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.cmtr_nat",
            "aws_route_table.private_b_rt",
            "data.aws_subnet.public_a",
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:route-table/rtb-024962d4ddc0ff334",
            "id": "rtb-024962d4ddc0ff334",
            "owner_id": "396913711198",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private-a-rt"
            },
            "tags_all": {
              "Name": "private-a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913711198",
            "id": "rtb-024962d4ddc0ff334",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396913711198:route-table/rtb-08efc4f9f4c134000",
            "id": "rtb-08efc4f9f4c134000",
            "owner_id": "396913711198",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private-b-rt"
            },
            "tags_all": {
              "Name": "private-b-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-033940a8ef1167e76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396913711198",
            "id": "rtb-08efc4f9f4c134000",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.cmtr_vkkq9lu1_vpc"
          ]
        }
      ]
    }
  ]
}